# distm

./: CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
benchmark/: benchmark.py  benchmark_3d.py  benchmark_wrapper.py
examples/: simple-example.py
src/: CMakeLists.txt
src/cpp/: distm.cpp
src/distm/: __init__.py  distm.py
tests/: test_distm.py  test_distm_3d.py  test_wrapper.py
