[metadata]
name = distm
author = Jacob N. Clark
author_email = packages@jnclark.org
version = file: VERSION.txt
url = https://jnclark.org
description = Distance Matrix Utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python
    Topic :: ML :: Python Modules
project_urls = 
    Issue Tracker = https://github.com/jnclark/distm/issues

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.7, <4
setup_requires =
    setuptools >=46.4.0
install_requires =
    numpy

[options.packages.find]
where = src
exclude =
    tests
    benchmark
    
[flake8]
max-line-length = 101
exclude =  .git, .eggs, __pycache__
per-file-ignores = __init__.py:F401
