CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(distm)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/cpp)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
add_library(distm SHARED src/cpp/distm.cpp)

# use OpenMP
find_package(OpenMP REQUIRED COMPONENTS CXX)
target_link_libraries(distm PRIVATE OpenMP::OpenMP_CXX)
